tests/lean/typeIncorrectPat.lean.expected.out
typeIncorrectPat.lean:2:1-2:17: error: pattern
  true
has type
  Bool
but is expected to have type
  fstâœ
